--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
-    "traceur": "0.0.45"
+    "traceur": "~0.0.49"
   },
   "devDependencies": {
     "broccoli": "^0.12.0",
