--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
-    "traceur": "~0.0.49"
+    "traceur": "~0.0.49",
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "broccoli": "^0.12.0",
