--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
+    "object-assign": "^0.3.1",
     "traceur": "~0.0.49"
   },
   "devDependencies": {
