--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "broccoli-filter": "^0.1.6",
     "object-assign": "^0.3.1",
-    "traceur": "~0.0.49"
+    "traceur": "0.0.51"
   },
   "devDependencies": {
     "broccoli": "^0.12.0",
