--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
-    "object-assign": "^0.3.1",
-    "traceur": "0.0.55"
+    "object-assign": "^1.0.0",
+    "traceur": "0.0.58"
   },
   "devDependencies": {
     "broccoli": "^0.12.3",
+    "broccoli-cli": "0.0.1",
     "mocha": "*"
   }
 }
