--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
+    "url": "sindresorhus.com"
   },
   "engines": {
     "node": ">=0.10.0"
@@ -38,11 +38,10 @@
   ],
   "dependencies": {
     "broccoli-filter": "^0.1.6",
-    "traceur": "~0.0.84"
+    "traceur": "~0.0.88"
   },
   "devDependencies": {
     "broccoli": "^0.13.2",
-    "broccoli-cli": "0.0.1",
     "mocha": "*"
   }
 }
